# TelegramToTRMNL

./: .gitignore  README.md  docker-compose.yml
src/: .dockerignore  .env.sample  Dockerfile  README.md  bot_utils.py  docker-compose.yml  epub_utils.py  main.py  pdf_utils.py  pyproject.toml  shared.liquid  src.js  trmnl_utils.py
src/markup/: shared.liquid
