[project]
name = "telegram-to-trmnl"
version = "0.2.0"
description = "A versatile Telegram bot that displays images, PDFs, and EPUBs on TRMNL devices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
    "reportlab>=4.0.8",
]
